# ytsaurus

./: .clang-tidy  .clangd  .dockerignore  .gitignore  .mapping.json  .piglet-meta.json  AGENTS.md  AUTHORS  BUILD.md  CMakeLists.darwin-arm64.txt  CMakeLists.darwin-x86_64.txt  CMakeLists.linux-aarch64.txt  CMakeLists.linux-x86_64.txt  CMakeLists.txt  CONTRIBUTING.md  Changelog  Dockerfile  Findlinux-headers-generic.cmake  LICENSE  Makefile  README.md  ROADMAP.md  RpcProxyProtocolVersion.txt  SECURITY.md  YaMakeBoilerplate.txt  adjust_environment.sh  clang-14.toolchain  clang.toolchain  conanfile.py  conanfile.txt  copy_ya_proto.sh  debuild.sh  files.sh  git-depth.py  main  main.cpp  make_ordered_by_start_time_index.py  my-gdb.sh  prepare-proto.py  protocol_version.py.in  (+10 more)
client/: CMakeLists.txt  Sources.txt
client/api/: admin.h  client.cpp  client.h  client_cache.cpp  config.h  connection.h  file_reader.h  journal_reader.h  journal_writer.h  object_service_proxy.h  operation_archive_schema.cpp  operation_archive_schema.h  persistent_queue.cpp  private.cpp  private.h  public.h  rowset.cpp  rowset.h  skynet.h  sticky_transaction_pool.cpp  sticky_transaction_pool.h  table_reader.h  table_writer.h  transaction.cpp  transaction.h
client/chunk_client/: chunk_replica-inl.h  chunk_replica.cpp  chunk_replica.h  config.h  data_statistics.cpp  public.cpp  public.h  read_limit.cpp  read_limit.h  reader_base.h
client/complex_types/: check_yson_token.h  named_structures_yson.h  scanner_factory.h
client/cypress_client/: public.cpp
client/driver/: command-inl.h  command.cpp  command.h  config.h  cypress_commands.cpp  cypress_commands.h  driver.cpp  driver.h  file_commands.cpp  journal_commands.h  scheduler_commands.cpp  table_commands.cpp  table_commands.h
client/election/: public.h
client/file_client/: config.h  public.h
client/formats/: CMakeLists.txt  config.cpp  config.h  dsv_writer.cpp  format.cpp  format.h  helpers.cpp  helpers.h  lenval_control_constants.h  parser.h  protobuf.cpp  protobuf.h  protobuf_parser.cpp  protobuf_parser.h  protobuf_writer.cpp  protobuf_writer.h  public.h  schemaful_dsv_parser.cpp  schemaful_dsv_writer.cpp  schemaful_writer.cpp  schemaful_writer.h  schemaless_web_json_writer.cpp  schemaless_web_json_writer.h  schemaless_writer_adapter.cpp  schemaless_writer_adapter.h  skiff_parser.cpp  skiff_parser.h  skiff_writer.cpp  skiff_writer.h  skiff_yson_converter.cpp  skiff_yson_converter.h  versioned_writer.cpp  versioned_writer.h  web_json_writer.cpp  yamr_parser.cpp  yamr_parser_base.cpp  yamr_parser_base.h  yamr_writer.cpp  yamr_writer_base.cpp  yamr_writer_base.h  (+8 more)
client/hive/: public.h  timestamp_map.cpp  timestamp_map.h  transaction_participant.h
client/hydra/: public.h  version.cpp  version.h
client/job_tracker_client/: public.h
client/journal_client/: public.h
client/misc/: config.h  discovery.cpp  public.h  workload.cpp  workload.h
client/node_tracker_client/: helpers.cpp  helpers.h  node_directory.cpp  node_directory.h  private.cpp  public.h
client/nodes/: agent_service_proxy.h  node_tracker_service_proxy.h  public.h
client/object_client/: helpers-inl.h  helpers.cpp  helpers.h  public.cpp  public.h
client/query_client/: query_statistics.cpp
client/scheduler/: operation_id_or_alias-inl.h  operation_id_or_alias.cpp  operation_id_or_alias.h  public.h
client/security_client/: acl.h  helpers.cpp  helpers.h  public.cpp  public.h
client/table_client/: column_rename_descriptor.cpp  column_rename_descriptor.h  columnar_statistics.cpp  config.h  helpers-inl.h  helpers.cpp  helpers.h  logical_type-inl.h  logical_type.cpp  logical_type.h  name_table.cpp  name_table.h  public.h  row_base.cpp  row_base.h  row_buffer.cpp  row_buffer.h  schema.cpp  schema.h  schemaful_reader.h  schemaful_reader_adapter.cpp  schemaful_reader_adapter.h  schemaful_writer.h  schemaful_writer_adapter.cpp  (+24 more)
core/: CMakeLists.txt  Sources.txt
nodejs/: CMakeLists.Install.txt  CMakeLists.txt  index.js  linker.map  linker.map.darwin  lint.json  lint.sh  package.json.in  run_proxy.sh.in  run_tests.sh.in  run_tests_ya.sh.in
python/: CMakeLists.txt  Makefile  Sources.txt  buffered_stream.cpp  buffered_stream.h  build_yandex_yp.sh  copy_ya_proto.sh  deploy.sh  deploy_provider.sh  descriptor.cpp  descriptor.h  driver.cpp  helpers.cpp  helpers.h  lazy_dict.cpp  lazy_dict.h  lazy_list_fragment_parser.cpp  lazy_list_fragment_parser.h  lazy_parser.cpp  lazy_parser.h  lazy_yson_consumer.h  linker.map  linker.map.darwin  list_fragment_parser.cpp  list_fragment_parser.h  object_builder.cpp  object_builder.h  prepare_proto.py  prepare_source_tree.py  public.h  replace_imports.py  response.h  serialize.cpp  serialize.h  setup.py  shutdown.cpp  shutdown.h  stream.cpp  stream.h  ya_programs.make.inc  (+3 more)
server/: CMakeLists.txt  Sources.txt  main.cpp
unittests/: CMakeLists.txt  Sources.txt  any_column_ut.cpp  any_ut.cpp  ast_ut.cpp  async_result_ut.cpp  async_stream_pipe_ut.cpp  async_stream_ut.cpp  async_yson_writer_ut.cpp  batch_ut.cpp  bind_ut.cpp  blackbox_ut.cpp  boolean_column_ut.cpp  boolean_formula_ut.cpp  bus_ut.cpp  callback_ut.cpp  cgroup_ut.cpp  checkpointable_stream_ut.cpp  checksum_ut.cpp  chunk_schema_ut.cpp  chunk_slice_fetcher_mock.h  chunk_slice_ut.cpp  chunk_tree_balancer_ut.cpp  chunk_tree_traversing_ut.cpp  column_format_ut.cpp  column_format_ut.h  compressed_integer_vector_ut.cpp  compression_ut.cpp  coroutines_ut.cpp  delayed_executor_ut.cpp  double_column_ut.cpp  dsv_parser_ut.cpp  dynamic_store_ut_helpers.h  election_ut.cpp  enum_ut.cpp  erasure_ut.cpp  expiring_cache_ut.cpp  file_changelog_ut.cpp  fls_ut.cpp  format_ut.cpp  (+102 more)
yt/: ABI.txt  CMakeLists.darwin-arm64.txt  CMakeLists.darwin-x86_64.txt  CMakeLists.linux-x86_64.txt  CMakeLists.txt  Changelog  RpcProxyProtocolVersion.txt  YaMakeBoilerplate.txt  build.h.in  chunk_holder_config.json  config.h.in  copy_ya_proto.sh  opensource_tests.inc  protocol_version.py.in  ya.make  ya.make.environment.inc  ya_cpp.make.inc  ya_programs.make.inc
ytlib/: CMakeLists.txt  Sources.txt  shutdown.cpp  shutdown.h
(+57353 files in other folders)
